--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,7 +7,8 @@
     android:layout_height="fill_parent"
     android:background="@color/darkGrey">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,42 +37,30 @@
         android:gravity="end"
         android:orientation="horizontal">
 
-        <com.makeramen.roundedimageview.RoundedImageView
-
+        <CheckBox
             android:layout_marginHorizontal="10dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="start"
-            android:id="@+id/imgFavorite"
-            android:scaleType="fitCenter"
-            app:riv_border_width="0dp"
-            app:riv_border_color="@color/lightGreen"
-            android:src="@drawable/ic_favorite"
-            app:riv_corner_radius="10dp" />
+            android:layout_marginTop="-10dp"
+            android:id="@+id/cbHeart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:button="@drawable/selector_item"
+            app:useMaterialThemeColors="false" />
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <ImageView
             android:layout_marginHorizontal="10dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:id="@+id/imgYoutube"
             android:scaleType="fitCenter"
-            app:riv_border_width="0dp"
-            app:riv_border_color="@color/lightGreen"
-            android:src="@drawable/ic_play"
-            app:riv_corner_radius="10dp" />
+            android:src="@drawable/ic_play" />
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <ImageView
             android:layout_marginHorizontal="10dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:id="@+id/imgshare"
             android:scaleType="centerCrop"
-            app:riv_mutate_background="true"
-            app:riv_border_width="0dp"
-            app:riv_border_color="@color/lightGreen"
-            android:src="@drawable/ic_share_green"
-            app:riv_corner_radius="10dp" />
+            android:src="@drawable/ic_share_green" />
     </LinearLayout>
 
     <TextView
