--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,36 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightBleu"
+
+    android:background="@color/darkGrey"
     tools:context=".SignUpActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nameLayout"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="20dp"
-        app:boxStrokeColor="@color/lightGreen"
-        app:hintTextColor="@color/lightGreen"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nameET"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/bg_search"
+            android:textColorHint="@color/lightGreen"
+            android:theme="@style/SearchView"
             android:hint="Type your Name"
+            android:backgroundTint="@color/lightBleu"
             android:inputType="textPersonName"
             android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ageLayout"
-
+        android:theme="@style/SearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -43,7 +45,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameLayout">
+        app:layout_constraintTop_toBottomOf="@+id/nameLayout"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ageET"
@@ -52,13 +55,15 @@
             android:layout_height="wrap_content"
             android:hint="Type your Age"
             android:inputType="number"
-            android:textSize="20sp" />
+            android:backgroundTint="@color/lightBleu"
+            android:textSize="20sp"
+            android:background="@drawable/bg_search"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/addressLayout"
-
+        android:theme="@style/SearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -72,10 +77,11 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addressET"
-
+            android:background="@drawable/bg_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Type your Address"
+            android:backgroundTint="@color/lightBleu"
             android:inputType="textPostalAddress"
             android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -83,10 +89,12 @@
 
     <EditText
         android:id="@+id/emailEt"
-        android:hint="Type your Email"
+        android:theme="@style/SearchView"
+        android:background="@drawable/bg_search"
+        android:hint="    Type your Email"
         android:textSize="20sp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,19 +103,17 @@
         app:layout_constraintTop_toBottomOf="@+id/addressLayout"
 
 
-
-
         />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordLayout"
-
+        android:theme="@style/SearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
-        app:boxStrokeColor="@color/lightGreen"
-        app:hintTextColor="@color/lightGreen"
+
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,23 +122,25 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passET"
-
+            android:background="@drawable/bg_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Type Your Password"
+            android:backgroundTint="@color/lightBleu"
             android:inputType="textPassword"
             android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/confirmPasswordLayout"
-
+        android:theme="@style/SearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
-        app:boxStrokeColor="@color/lightGreen"
-        app:hintTextColor="@color/lightGreen"
+
+        android:backgroundTint="@color/lightBleu"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,9 +149,10 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/confirmPassEt"
-
+            android:background="@drawable/bg_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/lightBleu"
             android:hint="Retype Your Password"
             android:inputType="textPassword"
             android:textSize="20sp" />
@@ -152,13 +161,14 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSignUp"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
-        android:background="@color/lightGreen"
+        android:background="@drawable/bg_search"
+        android:backgroundTint="@color/purple_500"
         android:gravity="center"
         android:text="Sign Up"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +183,7 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="Already Registered , Sign In !"
-        android:textColor="@color/black"
+        android:textColor="@color/lightGreen"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
