--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -3,14 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_200"
+    android:background="@color/darkGrey"
     tools:context=".activity.FavoriteFragment">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="favorite"
-        android:textSize="26sp"
-        android:layout_gravity="center"/>
+        android:layout_marginStart="12dp"
+        android:id="@+id/textFavorite"
+        android:layout_marginTop="20dp"
+        android:text="Favorites"
+        android:textColor="@color/lightGreen"
+        android:textSize="27sp"
+        android:textStyle="bold" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFavorite"
+        android:layout_below="@+id/textFavorite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp" />
+   </RelativeLayout>
 
 </FrameLayout>
